# leptos-cloudflare-worker

./: .gitignore  .justfile  Cargo.toml  wrangler.toml
.wrangler/tmp/bundle-5phkHn/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/bundle-QCoyGo/: middleware-loader.entry.ts
.wrangler/tmp/bundle-XEHBhT/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/dev-0LZGbx/: c25b8760129863353fc79e18c814847867b49744-index_bg.wasm  shim.js  shim.js.map
.wrangler/tmp/dev-A3GpdQ/: e8bfedc46f806e907cc4c6ac9b40ea1547897d6f-index_bg.wasm  shim.js  shim.js.map
.wrangler/tmp/dev-HXN0MP/: 9e04ceeb300bb68c045fca22a3db10bc320e6651-index_bg.wasm  shim.js  shim.js.map
app/: Cargo.toml
app/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
worker/: Cargo.toml
worker/src/: lib.rs
